Fixing overflow bug and autofocus bug.

--- a/socket-io-client/src/components/WelcomePage/WelcomePage.scss
+++ b/socket-io-client/src/components/WelcomePage/WelcomePage.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: pink;
+    overflow: hidden;
 }
 #page-container {
     @extend %flex;
